Revert "Revert "fix: choose z-index problem""
This reverts commit 16f51c5b4ce2ac00cd860888d3eb4fc86c2a1e9a.

--- a/packages/webgal/src/Core/gameScripts/performStyles/choose.module.scss
+++ b/packages/webgal/src/Core/gameScripts/performStyles/choose.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   z-index: 13;
+  transform: translateZ(13px);
   background: rgba(0, 0, 0, 0.05);
 }
 
